added materialize, , edited routed, aslo added back button

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,1 +1,11 @@
-/* TODO */
+nav .nav-wrapper {
+    margin-top: 200px;
+}
+
+/*html {*/
+    /*background: url(../img/la.jpg) no-repeat center center fixed;*/
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*background-size: cover;*/
+/*}*/
