--- a/templates/scoreboard.xml
+++ b/templates/scoreboard.xml
@@ -1,2 +1,19 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="json">
+    <div id="scores" class="row">
+        <div class="col s12 m6 offset-m3">
+            <nav>
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo center">Рекорды</a>
+                    <ul class="left hide-on-med-and-down">
+                        <li>
+                            <a id="go-back" class="waves-effect waves-light btn">Назад</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div>
+                content
+            </div>
+        </div>
+    </div>
 </fest:template>
