--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -2,10 +2,10 @@ nav .nav-wrapper {
     margin-top: 200px;
 }
 
-/*html {*/
-    /*background: url(../img/la.jpg) no-repeat center center fixed;*/
-  /*-webkit-background-size: cover;*/
-  /*-moz-background-size: cover;*/
-  /*-o-background-size: cover;*/
-  /*background-size: cover;*/
-/*}*/
+html {
+    background: url(../img/la.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
