--- a/templates/login.xml
+++ b/templates/login.xml
@@ -3,10 +3,10 @@
         <div class="col s12 m6 offset-m3">
             <nav>
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo center">Войти</a>
+                    <a class="brand-logo center">Войти</a>
                     <ul class="left hide-on-med-and-down">
                         <li>
-                            <a id="go-back" class="waves-effect waves-light btn">Назад</a>
+                            <a class="js-go-back waves-effect waves-light btn">Назад</a>
                         </li>
                     </ul>
                 </div>
@@ -14,7 +14,7 @@
         </div>
         <div class="col s12 m6 offset-m3">
               <div class="card-panel">
-                  <form action="#game">
+                  <form>
                     <div class="input-field">
                       <i class="material-icons prefix">perm_identity</i>
                       <input id="icon_prefix" type="text" class="validate"></input>
@@ -26,8 +26,7 @@
                       <label for="password">Password</label>
                     </div>
                     <div>
-                        <!--<input id="submit" class="waves-effect waves-light btn" type="submit"></input>-->
-                        <a href="#game" class="waves-effect waves-light btn">Войти</a>
+                        <input class="js-submit waves-effect waves-light btn" type="submit"></input>
                     </div>
                   </form>
               </div>
