--- a/templates/registration.xml
+++ b/templates/registration.xml
@@ -3,10 +3,10 @@
         <div class="col s12 m6 offset-m3">
             <nav>
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo center">Регистрация</a>
+                    <a class="brand-logo center">Регистрация</a>
                     <ul class="left hide-on-med-and-down">
                         <li>
-                            <a id="go-back" class="waves-effect waves-light btn">Назад</a>
+                            <a class="js-go-back waves-effect waves-light btn">Назад</a>
                         </li>
                     </ul>
                 </div>
@@ -36,8 +36,7 @@
                           <label for="password_conformation">Repeat Password</label>
                     </div>
                     <div>
-                        <!--<input id="submit" class="waves-effect waves-light btn" type="submit"></input>-->
-                        <a href="#game" class="waves-effect waves-light btn">Зарегистрироваться</a>
+                        <input class="js-submit waves-effect waves-light btn" type="submit"></input>
                     </div>
                   </form>
               </div>
