added session and validation for registration and login

--- a/templates/registration.xml
+++ b/templates/registration.xml
@@ -19,21 +19,25 @@
                           <i class="material-icons prefix">info_outline</i>
                         <input id="email" type="email" class="validate"></input>
                         <label for="email" data-error="wrong" data-success="right">Email</label>
+                          <div class="js-email-error form__error"></div>
                     </div>
                     <div class="input-field">
                           <i class="material-icons prefix">perm_identity</i>
-                          <input id="icon_prefix" type="text" class="validate"></input>
-                          <label for="icon_prefix">Username</label>
+                          <input id="username" type="text" class="validate"></input>
+                          <label for="username">Username</label>
+                            <div class="js-username-error form__error"></div>
                     </div>
                     <div class="input-field">
                           <i class="material-icons prefix">lock_open</i>
                           <input id="password" type="password" class="validate"></input>
                           <label for="password">Password</label>
+                            <div class="js-password1-error form__error"></div>
                     </div>
                     <div class="input-field">
                           <i class="material-icons prefix">lock</i>
                           <input id="password_conformation" type="password" class="validate"></input>
                           <label for="password_conformation">Repeat Password</label>
+                            <div class="js-password2-error form__error"></div>
                     </div>
                     <div>
                         <input class="js-submit waves-effect waves-light btn" type="submit"></input>
