--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -9,3 +9,12 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
+
+.form__error {
+    display:none;
+    color: white;
+    margin: 0 20px 20px 20px;
+    padding-left: 10px;
+    background-color: #f44336;
+    border-radius: 5px;
+}
