--- a/templates/registration.xml
+++ b/templates/registration.xml
@@ -18,7 +18,7 @@
                       <div class="input-field">
                           <i class="material-icons prefix">info_outline</i>
                         <input id="email" type="email" class="validate"></input>
-                        <label for="email" data-error="wrong" data-success="right">Email</label>
+                        <label for="email">Email</label>
                           <div class="js-email-error form__error"></div>
                     </div>
                     <div class="input-field">
