--- a/templates/login.xml
+++ b/templates/login.xml
@@ -14,7 +14,7 @@
         </div>
         <div class="col s12 m6 offset-m3">
               <div class="card-panel">
-                  <form>
+                  <form class="form">
                     <div class="input-field">
                       <i class="material-icons prefix">perm_identity</i>
                       <input id="username" type="text" class="validate"></input>
