--- a/templates/registration.xml
+++ b/templates/registration.xml
@@ -59,7 +59,7 @@
                     </fest:get>
                       <div class="form__avatar">
                           <video id="video" width="640" height="480"></video>
-                          <button id="snap">Сделать фото</button>
+                          <a class="js-make-photo waves-effect waves-light btn" id="snap">Сделать фото</a>
                           <canvas id="canvas" width="640" height="480"></canvas>
                       </div>
                       <div class="form__error form__user__create__error">
