--- a/templates/registration.xml
+++ b/templates/registration.xml
@@ -58,7 +58,7 @@
                             </fest:params>
                     </fest:get>
                       <div class="form__avatar">
-                          <video id="video" width="440" height="280"></video>
+                          <video class="js-video" id="video" width="440" height="280"></video>
                           <a class="js-make-photo waves-effect waves-light btn" id="snap">Сделать фото</a>
                           <canvas id="canvas" width="440" height="280"></canvas>
                       </div>
