--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -19,10 +19,14 @@ html {
     border-radius: 5px;
 }
 
+.form__avatar{
+    margin-top: 10px;
+    margin-bottom: 10px; 
+}
+
 .form__avatar__video, .form__avatar__canvas{
-    width: 100%;
-    height: 100%;
-    margin-top: 20px;
+    width: 320px;
+    height: 240px;  
 }
 
 
