--- a/templates/game.xml
+++ b/templates/game.xml
@@ -22,7 +22,7 @@
         <div class="container">
             <div id = "user_stack" class="leftBar fl" style="">
             </div>
-            <div class="rightBar fr">
+            <div class="js-insert-back rightBar fr">
 
             </div>
 
