--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,197 +1,186 @@
 .nav {
-    margin-top: 200px;
+  margin-top: 200px;
 }
-
 html {
-    background: url(../img/la.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background: url(../img/la.jpg) no-repeat center center fixed;
   background-size: cover;
 }
-
-.form__error{
-    display:none;
-    color: white;
-    margin: 0 20px 20px 20px;
-    padding-left: 10px;
-    background-color: #f44336;
-    border-radius: 5px;
+.form__error {
+  display: none;
+  color: white;
+  margin: 0 20px 20px 20px;
+  padding-left: 10px;
+  background-color: #f44336;
+  border-radius: 5px;
 }
-
-.form__avatar{
-    margin-top: 10px;
-    margin-bottom: 10px; 
+.form__avatar {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-
-.form__avatar__video, .form__avatar__canvas{
-    width: 320px;
-    height: 240px;  
+.form__avatar__video,
+.form__avatar__canvas {
+  width: 320px;
+  height: 240px;
 }
-
-
-/* Add some margin to the page and set a default font and colour */
-
-/*body {*/
-    /*margin: 30px;*/
-    /*font-family: "Georgia", serif;*/
-    /*line-height: 1.8em;*/
-    /*color: #333;*/
-/*}*/
-
-/*/!* Give headings their own font *!/*/
-
-/*h1, h2, h3, h4 {*/
-    /*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
-/*}*/
-
-/* Main content area */
-
 #content-game {
-    margin: 80px 70px;
-    text-align: center;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
+  margin: 80px 70px;
+  text-align: center;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+      user-select: none;
 }
-
-/* Header/footer boxes */
-
 .wideBox {
-    clear: both;
-    text-align: center;
-    margin: 70px;
-    padding: 10px;
-    background: #ebedf2;
-    border: 1px solid #333;
+  clear: both;
+  text-align: center;
+  margin: 70px;
+  padding: 10px;
+  background: #ebedf2;
+  border: 1px solid #333;
 }
-
 .wideBox h1 {
-    font-weight: bold;
-    margin: 20px;
-    color: #666;
-    font-size: 1.5em;
+  font-weight: bold;
+  margin: 20px;
+  color: #666;
+  font-size: 1.5em;
 }
-
-/* Slots for final card positions */
-
-#cardSlots, #cardSlots2 {
-    margin: 50px auto 50px auto;
-    background: #ddf;
+#cardSlots,
+#cardSlots2 {
+  margin: 50px auto 50px auto;
+  background: #ddf;
 }
-
-/* The initial pile of unsorted cards */
-
-#cardPile, #cardPile2 {
-    margin: 0 auto;
-    background: #ffd;
+#cardPile,
+#cardPile2 {
+  margin: 0 auto;
+  background: #ffd;
 }
-#cardSlots, #cardSlots2 {
-    width: 270px;
-    height: 120px;
-    padding: 10px 40px;
-    border: 2px solid #333;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    -moz-box-shadow: 0 0 .3em rgba(0, 0, 0, .8);
-    -webkit-box-shadow: 0 0 .3em rgba(0, 0, 0, .8);
-    box-shadow: 0 0 .3em rgba(0, 0, 0, .8);
+#cardSlots,
+#cardSlots2 {
+  width: 270px;
+  height: 120px;
+  padding: 10px 40px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.8);
 }
-#cardPile,  #cardPile2 {
-    height: 110px;
-    padding: 15px;
-    border: 2px solid #333;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    -moz-box-shadow: 0 0 .3em rgba(0, 0, 0, .8);
-    -webkit-box-shadow: 0 0 .3em rgba(0, 0, 0, .8);
-    box-shadow: 0 0 .3em rgba(0, 0, 0, .8);
+#cardPile,
+#cardPile2 {
+  height: 110px;
+  padding: 15px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.8);
 }
-
-/* Individual cards and slots */
-
-#cardSlots div, #cardPile div, #cardSlots2 div, #cardPile2 div {
-    float: left;
-    width: 58px;
-    height: 60px;
-    padding: 10px;
-    padding-top: 40px;
-    padding-bottom: 0;
-    border: 2px solid #333;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    margin: 0 0 0 10px;
-    background: #fff;
+#cardSlots div,
+#cardPile div,
+#cardSlots2 div,
+#cardPile2 div {
+  float: left;
+  width: 58px;
+  height: 60px;
+  padding: 10px;
+  padding-top: 40px;
+  padding-bottom: 0;
+  border: 2px solid #333;
+  border-radius: 10px;
+  margin: 0 0 0 10px;
+  background: #fff;
 }
-
-#cardSlots div:first-child, #cardPile div:first-child, #cardSlots2 div:first-child, #cardPile2 div:first-child {
-    margin-left: 0;
+#cardSlots div:first-child,
+#cardPile div:first-child,
+#cardSlots2 div:first-child,
+#cardPile2 div:first-child {
+  margin-left: 0;
 }
-
-#cardSlots div.hovered, #cardSlots2 div.hovered {
-    background: #aaa;
+#cardSlots div.hovered,
+#cardSlots2 div.hovered {
+  background: #aaa;
 }
-
-#cardSlots div, #cardSlots2 div {
-    border-style: dashed;
+#cardSlots div,
+#cardSlots2 div {
+  border-style: dashed;
 }
-
-#cardPile div, #cardPile2 div {
-    background: #666;
-    color: #fff;
-    font-size: 50px;
-    text-shadow: 0 0 3px #000;
+#cardPile div,
+#cardPile2 div {
+  background: #666;
+  color: #fff;
+  font-size: 50px;
+  text-shadow: 0 0 3px #000;
 }
-
-#cardPile div.ui-draggable-dragging, #cardPile2 div.ui-draggable-dragging {
-    -moz-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
-    -webkit-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
-    box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
+#cardPile div.ui-draggable-dragging,
+#cardPile2 div.ui-draggable-dragging {
+  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.8);
 }
-
-/* Individually coloured cards */
-
-#card1.correct { background: red; }
-#card2.correct { background: brown; }
-#card3.correct { background: orange; }
-#card4.correct { background: yellow; }
-#card5.correct { background: green; }
-#card6.correct { background: cyan; }
-#card7.correct { background: blue; }
-#card8.correct { background: indigo; }
-#card9.correct { background: purple; }
-#card10.correct { background: violet; }
-#card11.correct { background: red; }
-#card12.correct { background: brown; }
-#card13.correct { background: orange; }
-#card14.correct { background: yellow; }
-#card15.correct { background: green; }
-#card16.correct { background: cyan; }
-#card17.correct { background: blue; }
-#card18.correct { background: indigo; }
-#card19.correct { background: purple; }
-#card20.correct { background: violet; }
-
-
-
-/* "You did it!" message */
+#card1.correct {
+  background: red;
+}
+#card2.correct {
+  background: brown;
+}
+#card3.correct {
+  background: orange;
+}
+#card4.correct {
+  background: yellow;
+}
+#card5.correct {
+  background: green;
+}
+#card6.correct {
+  background: cyan;
+}
+#card7.correct {
+  background: blue;
+}
+#card8.correct {
+  background: indigo;
+}
+#card9.correct {
+  background: purple;
+}
+#card10.correct {
+  background: violet;
+}
+#card11.correct {
+  background: red;
+}
+#card12.correct {
+  background: brown;
+}
+#card13.correct {
+  background: orange;
+}
+#card14.correct {
+  background: yellow;
+}
+#card15.correct {
+  background: green;
+}
+#card16.correct {
+  background: cyan;
+}
+#card17.correct {
+  background: blue;
+}
+#card18.correct {
+  background: indigo;
+}
+#card19.correct {
+  background: purple;
+}
+#card20.correct {
+  background: violet;
+}
 #successMessage {
-    position: absolute;
-    left: 580px;
-    top: 250px;
-    width: 0;
-    height: 0;
-    z-index: 100;
-    background: #dfd;
-    border: 2px solid #333;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    -moz-box-shadow: .3em .3em .5em rgba(0, 0, 0, .8);
-    -webkit-box-shadow: .3em .3em .5em rgba(0, 0, 0, .8);
-    box-shadow: .3em .3em .5em rgba(0, 0, 0, .8);
-    padding: 20px;
+  position: absolute;
+  left: 580px;
+  top: 250px;
+  width: 0;
+  height: 0;
+  z-index: 100;
+  background: #dfd;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0.3em 0.3em 0.5em rgba(0, 0, 0, 0.8);
+  padding: 20px;
 }
