--- a/public_html/css/cards/template.css
+++ b/public_html/css/cards/template.css
@@ -1,14 +1,14 @@
-.container > .leftBar, .container > .rightBar{
+.rightBar{
     width: 219px;
     height: 100%;
     padding: 75px 35px 0 45px;
     box-sizing: border-box;
 }
-#table .leftBar, #table .rightBar{
-    width: 210px;
+.leftBar{
+    width: 219px;
     height: 100%;
+    padding: 75px 35px 0 45px;
     box-sizing: border-box;
-    padding: 5px 41px 19px 36px;
 }
 #table{
     height: 100%;
@@ -17,26 +17,46 @@
     box-sizing: border-box;
     padding: 80px 0;
 }
-#sortable1, #sortable2 {
+.leftBar{
+    width: 210px;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 5px 41px 19px 36px;
+}
+.rightBar {
+    width: 210px;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 5px 41px 19px 36px;
+}
+#sortable1{
     width: 120px;
     height: 300px;
     margin: 0 auto;
 }
-  #sortable1 li, #sortable2 li {
-margin-bottom: 20px;
-  }
-#sortable2{
+#sortable1 li{
+    margin-bottom: 20px;
+}
+
+#sortable2 {
+    width: 120px;
+    height: 300px;
+    margin: 0 auto;
     width: 100%;
     min-height: 100%;
     margin: 0 auto;
     box-shadow: 0px 0px 25px #fff;
     background: rgba(255,255,255,0.3);
 }
+
+#sortable2 li {
+    margin-bottom: 20px;
+}
+
 .playing_card{
     z-index: 10;
     width:120px;
 }
-
 img{
      cursor: -webkit-grabbing;
 }
